<resources>
    <string name="app_name">Signal Prep</string>
    <string name="app_settings">Device 1 Settings</string>
    <string name="device1_enabled">Device 1 Enabled</string>
    <string name="device2_enabled">Device 2 Enabled</string>
    <string name="device_1_tab">Device 1</string>
    <string name="device_2_tab">Device 2</string>
    <string name="progen_1_tab">Progen 1</string>
    <string name="carrier_frequency">Device 1 CH1 Carrier Frequency (Hz)</string>
    <string name="used_freqeuncy">Device 1 CH1 Used Frequency</string>
    <string name="wave_type">Device 1 CH1 Wave Type</string>
    <string name="offset">Device 1 CH1 Offset</string>
    <string name="duty_cycle">Device 1 CH1 Duty Cycle</string>
    <string name="amplitude">Device 1 CH1 Amplitude</string>
    <string name="load">Device 1 CH1 Load</string>
    <string name="ch2_carrier_frequency">Device 1 CH2 Carrier Frequency (Hz)</string>
    <string name="ch2_used_frequency">Device 1 CH2 Used Frequency</string>
    <string name="ch2_wave_type">Device 1 CH2 Wave Type</string>
    <string name="ch2_offset">Device 1 CH2 Offset</string>
    <string name="ch2_duty_cycle">Device 1 CH2 Duty Cycle</string>
    <string name="ch2_amplitude">Device 1 CH2 Amplitude</string>
    <string name="ch2_load">Device 1 CH2 Load</string>
    <string name="device_type">Device 1 Device Type</string>
    <string name="fg_ip">Device 1 FG IP</string>
    <string name="fg_port">Device 1 FG Port</string>
    <string name="device2_carrier_frequency">Device 2 CH1 Carrier Frequency (Hz)</string>
    <string name="device2_used_freqeuncy">Device 2 CH1 Used Frequency</string>
    <string name="device2_wave_type">Device 2 CH1 Wave Type</string>
    <string name="device2_offset">Device 2 CH1 Offset</string>
    <string name="device2_duty_cycle">Device 2 CH1 Duty Cycle</string>
    <string name="device2_amplitude">Device 2 CH1 Amplitude</string>
    <string name="device2_load">Device 2 CH1 Load</string>
    <string name="device2_ch2_carrier_frequency">Device 2 CH2 Carrier Frequency (Hz)</string>
    <string name="device2_ch2_used_frequency">Device 2 CH2 Used Frequency</string>
    <string name="device2_ch2_wave_type">Device 2 CH2 Wave Type</string>
    <string name="device2_ch2_offset">Device 2 CH2 Offset</string>
    <string name="device2_ch2_duty_cycle">Device 2 CH2 Duty Cycle</string>
    <string name="device2_ch2_amplitude">Device 2 CH2 Amplitude</string>
    <string name="device2_ch2_load">Device 2 CH2 Load</string>
    <string name="device2_device_type">Device 2 Device Type</string>
    <string name="device2_fg_ip">Device 2 FG IP</string>
    <string name="device2_fg_port">Device 2 FG Port</string>
    <string name="progen1_carrier_frequency">Progen 1 Carrier Frequency (Hz)</string>
    <string name="progen1_used_frequency">Progen 1 Used Frequency</string>
    <string name="progen1_wave_type">Progen 1 Wave Type</string>
    <string name="progen1_duty_cycle">Progen 1 Duty Cycle</string>
    <string name="progen1_pulsing">Progen 1 Pulsing</string>
    <string name="progen1_pulse_rate">Progen 1 Pulse Rate</string>
    <string name="progen1_output">Output</string>
    <string name="progen1_enabled">Progen 1 Enabled</string>
    <string name="total_duration_minutes">Total Duration (minutes)</string>
    <string name="apply_duration">Apply Duration</string>
    <string name="actual">Actual</string>
    <string name="calculated">D1CH1 Calc</string>
    <string name="ch2_calculated">D1CH2 Calc</string>
    <string name="d2ch1_calculated">D2CH1</string>
    <string name="d2ch2_calculated">D2CH2</string>
    <string name="pg1_calculated">PG1 Calc</string>
    <string name="duration">Duration (seconds)</string>
    <string name="checkbox">Enabled</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="add_row">Add Row</string>
    <string name="import_csv">Import CSV</string>
    <string name="run">Run</string>
    <string name="actual_hint">Actual frequency</string>
    <string name="duration_hint">Duration</string>

    <string-array name="wave_types">
        <item>SINE</item>
        <item>SQUARE</item>
    </string-array>

    <string-array name="used_frequency_options">
        <item>Actual</item>
        <item>Calculated</item>
    </string-array>

    <string-array name="load_options">
        <item>HiZ</item>
        <item>50ohm</item>
    </string-array>

    <string-array name="device_type_options">
        <item>SDG1000X</item>
        <item>SDG7000A</item>
    </string-array>

    <string-array name="progen1_output_options">
        <item>Positive</item>
        <item>Negative</item>
        <item>Centre</item>
    </string-array>
</resources>
