<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/actualInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/actual_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/ch1CalculatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:id="@+id/ch2CalculatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:id="@+id/d2Ch1CalculatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:id="@+id/d2Ch2CalculatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <TextView
        android:id="@+id/pg1CalculatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

    <EditText
        android:id="@+id/durationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/duration_hint"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/enabledCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/deleteRowButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/delete" />
</LinearLayout>
